@@ -4,6 +4,7 @@ requires 'Exporter';
 requires 'List::Util'   => '1.33';
 requires 'parent';
 requires 'Perl::Critic' => '1.126';
+requires 'Perl::Critic::Policy::Objects::ProhibitIndirectSyntax'               => '1.126';
 requires 'Perl::Critic::Policy::Subroutines::ProhibitAmpersandSigils'          => '1.126';
 requires 'Perl::Critic::Policy::ValuesAndExpressions::ProhibitArrayAssignAref' => '90';
 requires 'Perl::Critic::Policy::Variables::ProhibitConditionalDeclarations'    => '1.126';
