@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add IndirectObjectNotation policy
 
 0.017     2016-09-29 17:24:15 EDT
   - DeprecatedFeatures will now consider "use UNIVERSAL;" a policy violation
